--- a/web/index.html
+++ b/web/index.html
@@ -9,8 +9,71 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            body {
+                background-color: #DCFFB0;
+            }
+            .menu{
+                position: absolute;
+                width: 100%;
+                height: 50px;
+                left: 0px;
+                top: 0px;
+                background: #C4C4C4;
+            }
+            .copy{
+                position: absolute;
+                width: 100%;
+                height: 50px;
+                left: 0px;
+                top: 606px;
+                background: #C4C4C4;
+            }
+            iframe{
+                width: 99.5%;
+                margin-top: 41px;
+                left: -3%;
+                background-color: white;
+                height: 551px;
+                background-color: #DCFFB0;
+
+            }
+            a{
+                position: absolute;
+                left: 3%;
+                top: 4%;
+                text-decoration: none;
+                padding: 10px;
+                margin-bottom: 10px;
+                margin-top: 10px;
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 20px;
+                line-height: 14px;
+                color: black;
+            }
+            label {
+                position: absolute;
+                left: 46%;
+                top: 49%;
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 20px;
+                line-height: 14px;
+                text-align: center;
+
+            }
+        </style>
     </head>
     <body>
-        <div>TODO write content</div>
+        <div class="menu">
+            <a href="" target="meuframe">Cadastro</a>
+        </div>
+        <div class="copy">
+            <label>Copyright @ Livre</label>
+        </div>
     </body>
+    <iframe src="" name="meuframe"></iframe>
 </html>
