--- a/web/consultaProduto.html
+++ b/web/consultaProduto.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Trabalho</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
@@ -67,7 +67,7 @@ and open the template in the editor.
             }
             .triangulo {
                 position: absolute;
-                left: 12%;
+                left: 16%;
                 top: 40%;
                 border-top: 19px solid #F59A9A; 
                 border-left: 19px solid transparent; 
@@ -79,12 +79,11 @@ and open the template in the editor.
         </head>
         <body>
             <div class="menu">
-                <a href="" target="meuframe">Cadastros</a>
+                <a href="" target="meuframe">Consulta Produto</a>
                 <div class="triangulo"></div>
             </div>
             <div class="copy">
                 <label>Copyright @ Livre</label>
             </div>
         </body>
-        <iframe src="" name="meuframe"></iframe>
     </html>
