--- a/web/cadastroProduto.html
+++ b/web/cadastroProduto.html
@@ -13,6 +13,15 @@ and open the template in the editor.
             body {
                 background-color: #DCFFB0;
             }
+            .container{
+                position: absolute;
+                width: 100%;
+                height: 50px;
+                left: 0%;
+                top: 15%;
+                background: #DCFFB0;
+
+            }
             .menu{
                 position: absolute;
                 width: 100%;
@@ -30,13 +39,12 @@ and open the template in the editor.
                 background: #C4C4C4;
             }
             iframe{
-                width: 99.5%;
-                margin-top: 41px;
-                left: -3%;
-                background-color: white;
-                height: 551px;
-                background-color: #DCFFB0;
-
+                position: absolute;
+                width: 80%;
+                height: 67%;
+                left: 10%;
+                top: 25%;
+                background: #F9FFFD;
             }
             a{
                 position: absolute;
@@ -53,7 +61,44 @@ and open the template in the editor.
                 line-height: 14px;
                 color: black;
             }
-            label {
+            .text1 {
+                position: absolute;
+                width: 600px;
+                height: 20px;
+                left: 85px;
+                top: 65%;
+                background: #F9FFFD;
+                border-radius: 10px;
+            }
+            .text2 {
+                position: absolute;
+                width: 600px;
+                height: 20px;
+                left: 85px;
+                top: 117px;
+                background-color: #F9FFFD;
+                border-radius: 10px;
+            }
+            .text3 {
+                position: absolute;
+                width: 600px;
+                height: 20px;
+                left: 85px;
+                top: 202px;
+                background-color: #F9FFFD;
+                border-radius: 10px;
+            }
+            .text4 {
+                position: absolute;
+                width: 600px;
+                height: 20px;
+                left: 85px;
+                top: 290px;
+                background-color: #F9FFFD;
+                border-radius: 10px;
+            }
+
+            .label1{
                 position: absolute;
                 left: 46%;
                 top: 49%;
@@ -65,6 +110,58 @@ and open the template in the editor.
                 text-align: center;
 
             }
+            .label2 {
+                position: absolute;
+                left: 85px;
+                top: 3%;
+            }
+            .label3 {
+                position: absolute;
+                left: 85px;
+                top: 85px;
+            }
+            .label4 {
+                position: absolute;
+                left: 85px;
+                top: 169px;
+            }
+            .label5 {
+                position: absolute;
+                left: 85px;
+                top: 258px;
+            }
+            .button1 {
+                position: absolute;
+                left: 9%;
+                top: 390px;
+                width: 100px;
+                height: 25px;
+                background: #85A7FE;
+                border-radius: 10px;
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 18px;
+                line-height: 14px;
+                text-align: center;
+                color: #B30D0D;
+            }
+            .button2 {
+                position: absolute;
+                left: 55%;
+                top: 390px;
+                width: 100px;
+                height: 25px;
+                background: #F59A9A;
+                border-radius: 10px;
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 18px;
+                line-height: 14px;
+                text-align: center;
+                color: #0F27FF;;
+            }
             .triangulo {
                 position: absolute;
                 left: 16%;
@@ -74,16 +171,70 @@ and open the template in the editor.
                 border-right: 19px solid transparent; 
                 height: 0; 
                 width: 0; 
+            }
+            .triangulo2 {
+                position: absolute;
+                left: 655px;
+                top: 220px;
+                border-top: 18px solid #F59A9A; 
+                border-left: 14px solid transparent; 
+                border-right: 14px solid transparent; 
+                height: 0; 
+                width: 0; 
+            }
+            table{
+                position: absolute;
+                width: 512px;
+                height: 208px;
+                left: 17px;
+                top: 114px;
+                background: #F9FFFD;
+            }
+            table, tr, td
+            {
+                border: red solid 1px;   
+            }
 
-            </style>
-        </head>
-        <body>
-            <div class="menu">
-                <a href="" target="meuframe">Produto</a>
-                <div class="triangulo"></div>
-            </div>
-            <div class="copy">
-                <label>Copyright @ Livre</label>
-            </div>
-        </body>
-    </html>
+        </style>
+    </head>
+    <body>
+        <script>
+            function cancelar() {
+                if ((document.getElementById('descricao').value = "")
+                        || (document.getElementById('categoria').value = "")
+                        || (document.getElementById('preco').value = "")
+                        || (document.getElementById('estoque').value = "")) {
+                    document.getElementById('descricao').value = "";
+                    document.getElementById('categoria').value = "";
+                    document.getElementById('preco').value = "";
+                    document.getElementById('estoque').value = "";
+                }
+            }
+        </script>
+        <div class="container">
+            <form action="">
+                <label for="descricao" class="label2">Descrição</label>
+                <input class="text1" type="text" id="descricao"/>
+                <label for="categoria" class="label3">Categoria</label>
+                <input class="text2" type="text" id="categoria"/>
+                <label for="preco" class="label4">Preço</label>
+                <input class="text3" type="text" id="preco"/>
+                <label for="estoque" class="label5">Estoque</label>
+                <input class="text4" type="text" id="estoque"/>
+                <input class="button1" type="button" value="Salvar" />
+                <input class="button2" onclick="cancelar()" type="button" value="Cancelar" />
+
+            </form>
+
+        </div>
+        <div class="menu">
+            <a href="" target="meuframe">Produto</a>
+            <div class="triangulo"></div>
+            <div class="triangulo2"></div>
+        </div>
+
+        <div class="copy">
+            <label class="label1">Copyright @ Livre</label>
+        </div>
+    </body>
+</html>
