--- a/web/consultaProduto.html
+++ b/web/consultaProduto.html
@@ -13,6 +13,15 @@ and open the template in the editor.
             body {
                 background-color: #DCFFB0;
             }
+            .container{
+                position: absolute;
+                width: 100%;
+                height: 50px;
+                left: 0%;
+                top: 15%;
+                background: #DCFFB0;
+
+            }
             .menu{
                 position: absolute;
                 width: 100%;
@@ -30,13 +39,12 @@ and open the template in the editor.
                 background: #C4C4C4;
             }
             iframe{
-                width: 99.5%;
-                margin-top: 41px;
-                left: -3%;
-                background-color: white;
-                height: 551px;
-                background-color: #DCFFB0;
-
+                position: absolute;
+                width: 80%;
+                height: 67%;
+                left: 10%;
+                top: 25%;
+                background: #F9FFFD;
             }
             a{
                 position: absolute;
@@ -53,7 +61,25 @@ and open the template in the editor.
                 line-height: 14px;
                 color: black;
             }
-            label {
+            .text1 {
+                position: absolute;
+                width: 88px;
+                height: 20px;
+                left: 12%;
+                top: 65%;
+                background: #F9FFFD;
+                border-radius: 10px;
+            }
+            .text2 {
+                position: absolute;
+                width: 600px;
+                height: 20px;
+                left: 28%;
+                top: 65%;
+                background-color: #F9FFFD;
+                border-radius: 10px;
+            }
+            .label1{
                 position: absolute;
                 left: 46%;
                 top: 49%;
@@ -65,6 +91,32 @@ and open the template in the editor.
                 text-align: center;
 
             }
+            .label2 {
+                position: absolute;
+                left: 13%;
+                top: 3%;
+            }
+            .label3 {
+                position: absolute;
+                left: 28%;
+                top: 3%;
+            }
+            .button1 {
+                position: absolute;
+                left: 78%;
+                top: 64%;
+                width: 100px;
+                height: 25px;
+                background: #85A7FE;
+                border-radius: 10px;
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 18px;
+                line-height: 14px;
+                text-align: center;
+                color: #B30D0D;
+            }
             .triangulo {
                 position: absolute;
                 left: 16%;
@@ -74,16 +126,38 @@ and open the template in the editor.
                 border-right: 19px solid transparent; 
                 height: 0; 
                 width: 0; 
+            }
+            table{
+                position: absolute;
+                width: 512px;
+                height: 208px;
+                left: 17px;
+                top: 114px;
+                background: #F9FFFD;
+            }
+            table, tr, td
+            {
+                border: red solid 1px;   
+            }
 
-            </style>
-        </head>
-        <body>
-            <div class="menu">
-                <a href="" target="meuframe">Consulta Produto</a>
-                <div class="triangulo"></div>
-            </div>
-            <div class="copy">
-                <label>Copyright @ Livre</label>
-            </div>
-        </body>
-    </html>
+        </style>
+    </head>
+    <body>
+        <div class="container">
+            <form action="">
+                <label for="id" class="label2">Id</label>
+                <input class="text1" type="text" id="id"/>
+                <label for="descricao" class="label3">Descrição</label>
+                <input class="text2" type="text" id="descricao"/>
+                <input class="button1" type="button" value="Pesquisar" />
+
+            </form>
+
+        </div>
+        <div class="menu">
+            <a href="" target="meuframe">Consulta Produto</a>
+            <div class="triangulo"></div>
+        </div>
+
+    </body>
+</html>
