--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Trabalho</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
@@ -117,6 +117,14 @@ and open the template in the editor.
                 line-height: 14px;
                 color: black;
             }
+            .index {
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 20px;
+                line-height: 14px;
+                color: black;
+            }
             .produto {
                 font-family: Roboto;
                 font-style: normal;
@@ -137,14 +145,6 @@ and open the template in the editor.
             { 
                 text-decoration:none; 
             } 
-            li {
-                font-family: Roboto;
-                font-style: normal;
-                font-weight: normal;
-                font-size: 18px;
-                line-height: 14px;
-                color: black;
-            }
 
         </style>
     </head>
@@ -152,7 +152,7 @@ and open the template in the editor.
 
         <div class="menu">
             <ul class="lista">
-                <li class="expande-sublista"> Cadastro 
+                <li class="expande-sublista"> <a class="index" href="index.html">Cadastro</a> 
                     <div class="sublista">
                         <div>
                             <div><a class="produto" href="cadastroProduto.html" target="meuframe">Produto</a></div>
