--- a/web/cadastroProduto.html
+++ b/web/cadastroProduto.html
@@ -97,7 +97,18 @@ and open the template in the editor.
                 background-color: #F9FFFD;
                 border-radius: 10px;
             }
+            label {
+                position: absolute;
+                left: 46%;
+                top: 49%;
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 20px;
+                line-height: 14px;
+                text-align: center;
 
+            }
             .label1{
                 position: absolute;
                 left: 46%;
@@ -231,6 +242,9 @@ and open the template in the editor.
             <a href="" target="meuframe">Produto</a>
             <div class="triangulo"></div>
             <div class="triangulo2"></div>
+        </div>
+         <div class="copy">
+            <label>Copyright @ Livre</label>
         </div>
 
     </body>
