--- a/web/index.html
+++ b/web/index.html
@@ -145,6 +145,14 @@ and open the template in the editor.
             { 
                 text-decoration:none; 
             } 
+            li {
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 18px;
+                line-height: 14px;
+                color: black;
+            }
 
         </style>
     </head>
