--- a/web/cadastroCategoria.html
+++ b/web/cadastroCategoria.html
@@ -27,7 +27,7 @@ and open the template in the editor.
                 width: 100%;
                 height: 50px;
                 left: 0px;
-                top: 0px;
+                top: -99px;
                 background: #C4C4C4;
             }
             .copy{
@@ -78,6 +78,18 @@ and open the template in the editor.
                 top: 65%;
                 background-color: #F9FFFD;
                 border-radius: 10px;
+            }
+            label {
+                position: absolute;
+                left: 46%;
+                top: 49%;
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 20px;
+                line-height: 14px;
+                text-align: center;
+
             }
             .label1{
                 position: absolute;
@@ -152,6 +164,14 @@ and open the template in the editor.
                 <input class="button1" type="button" value="Salvar" />
 
             </form>
+            <div class="menu">
+            <a href="" target="meuframe">Produto</a>
+            <div class="triangulo"></div>
+        </div>
+            <div class="copy">
+            <label>Copyright @ Livre</label>
+        </div>
+
 
         </div>
     </body>
