--- a/web/consultaProduto.html
+++ b/web/consultaProduto.html
@@ -79,6 +79,18 @@ and open the template in the editor.
                 background-color: #F9FFFD;
                 border-radius: 10px;
             }
+            label {
+                position: absolute;
+                left: 46%;
+                top: 49%;
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 20px;
+                line-height: 14px;
+                text-align: center;
+
+            }
             .label1{
                 position: absolute;
                 left: 46%;
@@ -157,6 +169,9 @@ and open the template in the editor.
         <div class="menu">
             <a href="" target="meuframe">Consulta Produto</a>
             <div class="triangulo"></div>
+        </div>
+        <div class="copy">
+            <label>Copyright @ Livre</label>
         </div>
 
     </body>
