--- a/web/index.html
+++ b/web/index.html
@@ -96,6 +96,8 @@ and open the template in the editor.
             .sublista{
                 display: none;
                 position: absolute;
+                left: 50%;
+                top: 110%;
                 background-color: #C4C4C4;
                 min-width: 100px;
                 z-index: 1;
