--- a/web/index.html
+++ b/web/index.html
@@ -98,8 +98,9 @@ and open the template in the editor.
                 position: absolute;
                 left: 50%;
                 top: 110%;
+                height: 117px;
                 background-color: #C4C4C4;
-                min-width: 100px;
+                min-width: 180px;
                 z-index: 1;
 
             }
@@ -112,6 +113,7 @@ and open the template in the editor.
                 display: block;
             }
             .categoria {
+                margin-top: 50px;
                 font-family: Roboto;
                 font-style: normal;
                 font-weight: normal;
@@ -165,9 +167,13 @@ and open the template in the editor.
                 <li class="expande-sublista"> <a class="index" href="index.html">Cadastro</a> 
                     <div class="sublista">
                         <div>
-                            <div><a class="produto" href="cadastroProduto.html" target="meuframe">Produto</a></div>
-                            <div><a class="categoria" href="cadastroCategoria.html" target="meuframe">Categoria</a></div>
-                            <div><a class="consulta" href="consultaProduto.html" target="meuframe">Consulta</a></div>
+                            <hr/>
+                            <div><a class="produto" href="cadastroProduto.html" target="meuframe">Cadastro de produto</a></div>
+                            <hr/>
+                            <div><a class="categoria" href="cadastroCategoria.html" target="meuframe">Cadastro de categoria</a></div>
+                            <hr/>
+                            <div><a class="consulta" href="consultaProduto.html" target="meuframe">Consulta de produto</a></div>
+                        <hr/>
                         </div>
                     </div>
             </ul>
