--- a/web/cadastroProduto.html
+++ b/web/cadastroProduto.html
@@ -205,6 +205,67 @@ and open the template in the editor.
             {
                 border: red solid 1px;   
             }
+            .lista{
+                display: inline-block;
+                background-color: #C4C4C4;
+                padding: 2px;
+                position: absolute;
+                left: 3%;
+                top: -25%;
+            }
+            .lista li {
+                display: inline;
+                background-color: #C4C4C4;
+                padding: 10px;
+                border-radius: 50%
+            }
+
+            .sublista{
+                display: none;
+                position: absolute;
+                left: 50px;
+                top: 45px;
+                height: 25px;
+                background-color: #C4C4C4;
+                min-width: 130px;
+                z-index: 1;
+
+            }
+
+            .sublista ul li{
+                display: block;
+                text-align: left;
+            }
+            .expande-sublista:hover .sublista{
+                display: block;
+            }
+            .produto {
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 20px;
+                line-height: 14px;
+                color: black;
+            }
+            .index {
+                position: relative;
+                left: 10px;
+                top:5px;
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 20px;
+                line-height: 14px;
+                color: black;
+            }
+            li {
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 18px;
+                line-height: 14px;
+                color: black;
+            }
 
         </style>
     </head>
@@ -239,9 +300,16 @@ and open the template in the editor.
 
         </div>
         <div class="menu">
-            <a href="" target="meuframe">Produto</a>
+                <ul class="lista">
+                <li class="expande-sublista"> <a class="produto">Produto</a> 
+                    <div class="sublista">
+                        <div>
+                            <div><a class="index" href="index.html">Tela Inicial</a></div>
+                        </div>
+                    </div>
+            </ul>
+
             <div class="triangulo"></div>
-            <div class="triangulo2"></div>
         </div>
          <div class="copy">
             <label>Copyright @ Livre</label>
