--- a/web/index.html
+++ b/web/index.html
@@ -29,15 +29,6 @@ and open the template in the editor.
                 top: 606px;
                 background: #C4C4C4;
             }
-            iframe{
-                width: 99.5%;
-                margin-top: 41px;
-                left: -3%;
-                background-color: white;
-                height: 551px;
-                background-color: #DCFFB0;
-
-            }
             .cad{
                 position: absolute;
                 left: 3%;
@@ -168,11 +159,11 @@ and open the template in the editor.
                     <div class="sublista">
                         <div>
                             <hr/>
-                            <div><a class="produto" href="cadastroProduto.html" target="meuframe">Cadastro de produto</a></div>
+                            <div><a class="produto" href="cadastroProduto.html">Cadastro de produto</a></div>
                             <hr/>
-                            <div><a class="categoria" href="cadastroCategoria.html" target="meuframe">Cadastro de categoria</a></div>
+                            <div><a class="categoria" href="cadastroCategoria.html">Cadastro de categoria</a></div>
                             <hr/>
-                            <div><a class="consulta" href="consultaProduto.html" target="meuframe">Consulta de produto</a></div>
+                            <div><a class="consulta" href="consultaProduto.html">Consulta de produto</a></div>
                         <hr/>
                         </div>
                     </div>
@@ -185,5 +176,4 @@ and open the template in the editor.
             <label>Copyright @ Livre</label>
         </div>
     </body>
-    <iframe src="" name="meuframe"></iframe>
 </html>
