--- a/web/cadastroProduto.html
+++ b/web/cadastroProduto.html
@@ -175,7 +175,7 @@ and open the template in the editor.
             }
             .triangulo {
                 position: absolute;
-                left: 16%;
+                left: 17%;
                 top: 40%;
                 border-top: 19px solid #F59A9A; 
                 border-left: 19px solid transparent; 
@@ -311,6 +311,7 @@ and open the template in the editor.
 
             <div class="triangulo"></div>
         </div>
+        <div class="triangulo2"></div>
          <div class="copy">
             <label>Copyright @ Livre</label>
         </div>
