--- a/web/consultaProduto.html
+++ b/web/consultaProduto.html
@@ -131,7 +131,7 @@ and open the template in the editor.
             }
             .triangulo {
                 position: absolute;
-                left: 16%;
+                left: 17%;
                 top: 40%;
                 border-top: 19px solid #F59A9A; 
                 border-left: 19px solid transparent; 
@@ -229,6 +229,10 @@ and open the template in the editor.
 
             </form>
 
+            <!--
+            A tabela será aberta após abertar no botao pesquisar,
+            E será feita na segunda entrega.
+            -->
         </div>
                 <div class="menu">
                 <ul class="lista">
