--- a/web/index.html
+++ b/web/index.html
@@ -29,6 +29,15 @@ and open the template in the editor.
                 top: 606px;
                 background: #C4C4C4;
             }
+            iframe{
+                width: 99.5%;
+                margin-top: 41px;
+                left: -3%;
+                background-color: white;
+                height: 551px;
+                background-color: #DCFFB0;
+
+            }
             .cad{
                 position: absolute;
                 left: 3%;
@@ -63,7 +72,7 @@ and open the template in the editor.
             }
             .triangulo {
                 position: absolute;
-                left: 12%;
+                left: 17%;
                 top: 40%;
                 border-top: 19px solid #F59A9A; 
                 border-left: 19px solid transparent; 
