--- a/web/cadastroCategoria.html
+++ b/web/cadastroCategoria.html
@@ -131,7 +131,7 @@ and open the template in the editor.
             }
             .triangulo {
                 position: absolute;
-                left: 16%;
+                left: 17%;
                 top: 40%;
                 border-top: 19px solid #F59A9A; 
                 border-left: 19px solid transparent; 
@@ -140,16 +140,14 @@ and open the template in the editor.
                 width: 0; 
             }
             table{
-                position: absolute;
-                width: 512px;
-                height: 208px;
-                left: 17px;
-                top: 114px;
-                background: #F9FFFD;
+                background-color: white;
+                width: 100%;
+                position: relative;
+                top:90px;
             }
-            table, tr, td
+            table, tr
             {
-                border: red solid 1px;   
+                border: black solid 1px;   
             }
             .lista{
                 display: inline-block;
@@ -227,19 +225,27 @@ and open the template in the editor.
             </form>
             <div class="menu">
                 <ul class="lista">
-                <li class="expande-sublista"> <a class="categoria">Categoria</a> 
-                    <div class="sublista">
-                        <div>
-                            <div><a class="index" href="index.html">Tela Inicial</a></div>
+                    <li class="expande-sublista"> <a class="categoria">Categoria</a> 
+                        <div class="sublista">
+                            <div>
+                                <div><a class="index" href="index.html">Tela Inicial</a></div>
+                            </div>
                         </div>
-                    </div>
-            </ul>
+                </ul>
 
-            <div class="triangulo"></div>
-        </div>
+                <div class="triangulo"></div>
+            </div>
+            <table>
+                <tr>
+                    <th>Id</th>
+                    <th>Descrição</th>
+                    <th>⠀⠀⠀⠀⠀⠀⠀</th>
+                    <th>⠀⠀⠀⠀⠀⠀⠀</th>
+                </tr>
+            </table>
             <div class="copy">
-            <label>Copyright @ Livre</label>
-        </div>
+                <label>Copyright @ Livre</label>
+            </div>
 
 
         </div>
