--- a/web/consultaProduto.html
+++ b/web/consultaProduto.html
@@ -140,16 +140,15 @@ and open the template in the editor.
                 width: 0; 
             }
             table{
-                position: absolute;
-                width: 512px;
-                height: 208px;
-                left: 17px;
-                top: 114px;
-                background: #F9FFFD;
+                background-color: white;
+                width: 90%;
+                position: relative;
+                top:200px;
+                left:60px;
             }
-            table, tr, td
+            table, tr
             {
-                border: red solid 1px;   
+                border: black solid 1px;   
             }
             .lista{
                 display: inline-block;
@@ -244,6 +243,17 @@ and open the template in the editor.
                     </div>
             </ul>
 
+                    <table>
+                <tr>
+                    <th>Id</th>
+                    <th>Descrição</th>
+                    <th>Preço</th>
+                    <th>Estoque</th>
+                    <th>Categoria</th>
+                    <th>⠀⠀⠀⠀⠀⠀⠀</th>
+                    <th>⠀⠀⠀⠀⠀⠀⠀</th>
+                </tr>
+            </table>
             <div class="triangulo"></div>
         </div>
         <div class="copy">
