--- a/web/cadastroCategoria.html
+++ b/web/cadastroCategoria.html
@@ -141,9 +141,10 @@ and open the template in the editor.
             }
             table{
                 background-color: white;
-                width: 100%;
+                width: 90%;
                 position: relative;
                 top:90px;
+                left:60px;
             }
             table, tr
             {
